--- a/wordgame/src/Components/PlayerOne/PlayerOne.scss
+++ b/wordgame/src/Components/PlayerOne/PlayerOne.scss
@@ -8,6 +8,7 @@
     grid-template-rows: repeat(9, $tw [GameBoard--tile]);
     grid-gap: $th $th;
     padding:8px;
+    // padding-top:0;
 
     h1 {
       @include WordUp--logo();
@@ -21,7 +22,7 @@
       grid-template-columns: $tw $tw;
       grid-template-rows: repeat(4, $tw);
       grid-gap: $th $th;
-      margin:$th*2 0;
+      // margin:$th*2 0;
 
       .letter {
         @include PlayerOne--letter;
@@ -33,8 +34,7 @@
       display: flex;
       flex-direction: column;
       grid-row-start: 6;
-      grid-row-end: span 2;
-      margin:$th*4 0;
+      // margin:$th*4 0;
 
       button {
         @include grid__center();
